--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -17,7 +17,7 @@ dnd {
 image:disabled {
   -gtk-icon-filter: opacity(0.5); }
 
-image, image:disabled, label, label:disabled, box, box:disabled {
+image, label, box {
   background-color: transparent; }
 
 .view {
@@ -726,52 +726,31 @@ headerbar, headerbar:not(.titlebar) {
     color: rgba(255, 255, 255, 0.7); }
     headerbar .subtitle:backdrop, headerbar:not(.titlebar) .subtitle:backdrop {
       color: rgba(0, 0, 0, 0.7); }
-  headerbar button, headerbar:not(.titlebar) button {
-    padding: 4px 8px;
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 0px;
-    color: #000000;
-    border-color: #000000;
-    border-top-color: #ececec;
-    border-left-color: #ececec;
-    background-color: #C0C0C0;
-    box-shadow: inset -1px 0 #7d7d7d, inset 0 -1px #7d7d7d, inset 1px 0 #ececec, inset 0 1px #ececec;
-    outline-color: #000000;
-    outline-offset: 0;
-    outline-style: solid; }
-    headerbar button:active, headerbar button:checked, headerbar:not(.titlebar) button:active, headerbar:not(.titlebar) button:checked {
-      color: #000000;
-      border-color: #000000;
-      background-color: #C0C0C0;
-      background-image: none;
-      box-shadow: inset 1px 0 #7d7d7d, inset 0 1px #7d7d7d, inset -1px 0 #ececec, inset 0 -1px #ececec; }
-      headerbar button:active:disabled, headerbar button:checked:disabled, headerbar:not(.titlebar) button:active:disabled, headerbar:not(.titlebar) button:checked:disabled {
-        color: #0a0a0a;
-        border-color: #9b9b9b;
-        background-color: #a4a4a4; }
-    headerbar button:disabled, headerbar:not(.titlebar) button:disabled {
-      color: #303030; }
-  headerbar entry, headerbar:not(.titlebar) entry {
-    padding: 4px 8px; }
   headerbar.titlebar, .titlebar headerbar, headerbar.titlebar:not(.titlebar), .titlebar headerbar:not(.titlebar) {
     border-radius: 0px 0px 0px 0px; }
-  headerbar .titlebutton.close, headerbar .titlebutton.maximize, headerbar .titlebutton.minimize, headerbar .titlebutton:not(separator), headerbar:not(.titlebar) .titlebutton.close, headerbar:not(.titlebar) .titlebutton.maximize, headerbar:not(.titlebar) .titlebutton.minimize, headerbar:not(.titlebar) .titlebutton:not(separator) {
+
+windowcontrols {
+  border-spacing: 6px; }
+  windowcontrols.start:not(.empty):dir(ltr), windowcontrols.end:not(.empty):dir(rtl) {
+    margin-right: 7px; }
+  windowcontrols.start:not(.empty):dir(rtl), windowcontrols.end:not(.empty):dir(ltr) {
+    margin-left: 7px; }
+  windowcontrols button.close, windowcontrols button.maximize, windowcontrols button.minimize {
     color: transparent;
     padding: 0;
     border-radius: 0;
     -gtk-icon-shadow: none;
     background-position: center;
     background-repeat: no-repeat; }
-  headerbar .titlebutton.close, headerbar:not(.titlebar) .titlebutton.close {
+  windowcontrols button.close {
     background-image: url("assets/close.png"); }
-  headerbar .titlebutton.minimize, headerbar:not(.titlebar) .titlebutton.minimize {
+  windowcontrols button.minimize {
     background-image: url("assets/minimize.png"); }
-  headerbar .titlebutton.maximize, headerbar:not(.titlebar) .titlebutton.maximize {
+  windowcontrols button.maximize {
     background-image: url("assets/maximize.png"); }
-  .maximized headerbar .titlebutton.maximize, .maximized headerbar:not(.titlebar) .titlebutton.maximize {
+  .maximized windowcontrols button.maximize {
     background-image: url("assets/restore.png"); }
-  headerbar .horizontal.right .titlebutton.maximize, headerbar:not(.titlebar) .horizontal.right .titlebutton.maximize {
+  windowcontrols .horizontal.right .titlebutton.maximize {
     margin-left: -6px;
     margin-right: -4px; }
 
@@ -1556,7 +1535,7 @@ actionbar {
     padding: 0 12px; }
 
 scrolledwindow > overshoot.top {
-  background-image: radial-gradient(farthest-side at top, black, transparent);
+  background-image: radial-gradient(farthest-side at top, rgba(0, 0, 0, 0.5), transparent);
   background-size: 100% 50%;
   background-repeat: no-repeat;
   background-position: top;
@@ -1565,7 +1544,7 @@ scrolledwindow > overshoot.top {
   box-shadow: none; }
 
 scrolledwindow > overshoot.bottom {
-  background-image: radial-gradient(farthest-side at bottom, black, transparent);
+  background-image: radial-gradient(farthest-side at bottom, rgba(0, 0, 0, 0.5), transparent);
   background-size: 100% 50%;
   background-repeat: no-repeat;
   background-position: bottom;
@@ -1574,7 +1553,7 @@ scrolledwindow > overshoot.bottom {
   box-shadow: none; }
 
 scrolledwindow > overshoot.left {
-  background-image: radial-gradient(farthest-side at left, black, transparent);
+  background-image: radial-gradient(farthest-side at left, rgba(0, 0, 0, 0.5), transparent);
   background-size: 50% 100%;
   background-repeat: no-repeat;
   background-position: left;
@@ -1583,7 +1562,7 @@ scrolledwindow > overshoot.left {
   box-shadow: none; }
 
 scrolledwindow > overshoot.right {
-  background-image: radial-gradient(farthest-side at right, black, transparent);
+  background-image: radial-gradient(farthest-side at right, rgba(0, 0, 0, 0.5), transparent);
   background-size: 50% 100%;
   background-repeat: no-repeat;
   background-position: right;
@@ -2224,10 +2203,7 @@ popover.entry-completion > contents {
   padding: 0; }
 
 statusbar {
-  padding: 4px;
-  color: #000000; }
-  statusbar frame > border {
-    border: none; }
+  padding: 4px; }
 
 menubutton > button > box {
   border-spacing: 6px; }
