--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -1327,136 +1327,161 @@ scale {
   min-height: 10px;
   min-width: 10px;
   padding: 12px; }
-  scale fill, scale trough {
+  scale > fill,
+  scale > trough {
     border: 1px solid #000000;
-    border-radius: 0;
+    border-radius: 0px;
     background-color: #C0C0C0;
-    outline-offset: 2px;
     border-bottom-color: #ececec;
     border-right-color: #ececec;
     box-shadow: inset 1px 0 #7d7d7d, inset 0 1px #7d7d7d, inset -1px 0 #ececec, inset 0 -1px #ececec; }
-    scale fill:disabled, scale trough:disabled {
+    scale > fill:disabled,
+    scale > trough:disabled {
       background-color: #b6b6b6; }
-  scale highlight {
+  scale > trough > highlight {
     border: none;
-    border-radius: 4px;
+    border-radius: 0px;
     background-color: transparent; }
-    scale highlight:disabled {
+    scale > trough > highlight:disabled {
       background-color: transparent; }
-      scale highlight:disabled:backdrop {
+      scale > trough > highlight:disabled:backdrop {
         background-color: transparent; }
-    scale highlight:backdrop {
+    scale > trough > highlight:backdrop {
       background-color: transparent; }
-  scale.horizontal indicator {
-    min-height: 6px;
-    min-width: 1px; }
-  scale.horizontal.fine-tune indicator {
-    min-height: 3px; }
-  scale.vertical indicator {
-    min-height: 1px;
-    min-width: 6px; }
-  scale.vertical.fine-tune indicator {
-    min-width: 3px; }
-  scale.fine-tune.horizontal {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    min-height: 14px; }
-  scale.fine-tune.vertical {
-    padding-left: 10px;
-    padding-right: 10px;
-    min-width: 14px; }
-  scale.fine-tune slider {
-    margin-top: -6px;
-    margin-bottom: -9px; }
-  scale.fine-tune fill, scale.fine-tune trough, scale.fine-tune highlight {
-    border-radius: 0; }
-  scale.fine-tune marks.top {
-    margin-bottom: 8px;
-    margin-top: -13px; }
-  scale.fine-tune marks.bottom {
-    margin-top: 8px;
-    margin-bottom: -13px; }
-  scale.fine-tune marks.top {
-    margin-right: 8px;
-    margin-left: -13px; }
-  scale.fine-tune marks.bottom {
-    margin-left: 8px;
-    margin-right: -13px; }
-  scale slider {
+  scale > trough > slider {
+    min-width: 21px;
     min-height: 21px;
-    min-width: 11px;
-    margin-top: -6px;
-    margin-bottom: -10px;
+    margin: -7px;
+    border-radius: 0px;
     border: none;
-    border-radius: 0;
     color: #FFFFFF;
     background-color: transparent;
+    background-position: center center;
+    background-repeat: no-repeat;
+    box-shadow: none; }
+    scale > trough > slider:hover {
+      color: #FFFFFF; }
+    scale > trough > slider:backdrop {
+      color: #FFFFFF; }
+  scale.horizontal > trough > slider {
+    margin-bottom: -10px;
     background-image: url("assets/slider-horiz.png"); }
-    scale slider:hover {
-      color: #FFFFFF;
+    scale.horizontal > trough > slider:hover {
       background-image: url("assets/slider-horiz.png"); }
-    scale slider:disabled {
-      -gtk-icon-shadow: none;
+    scale.horizontal > trough > slider:disabled {
       background-image: url("assets/slider-horiz-insensitive.png"); }
-      scale slider:disabled:backdrop {
-        -gtk-icon-shadow: none;
+      scale.horizontal > trough > slider:disabled:backdrop {
         background-image: url("assets/slider-horiz-insensitive.png"); }
-    scale slider:backdrop {
-      color: #FFFFFF;
+    scale.horizontal > trough > slider:backdrop {
       background-image: url("assets/slider-horiz-insensitive.png"); }
-  scale.horizontal.marks-before slider {
+  scale.horizontal.marks-after:not(.marks-before) > trough > slider {
+    margin-bottom: -10px;
+    background-image: url("assets/slider-horiz.png"); }
+    scale.horizontal.marks-after:not(.marks-before) > trough > slider:hover {
+      background-image: url("assets/slider-horiz.png"); }
+    scale.horizontal.marks-after:not(.marks-before) > trough > slider:disabled {
+      background-image: url("assets/slider-horiz-insensitive.png"); }
+      scale.horizontal.marks-after:not(.marks-before) > trough > slider:disabled:backdrop {
+        background-image: url("assets/slider-horiz-insensitive.png"); }
+    scale.horizontal.marks-after:not(.marks-before) > trough > slider:backdrop {
+      background-image: url("assets/slider-horiz-insensitive.png"); }
+  scale.horizontal.color > trough > slider, scale.horizontal.marks-before:not(.marks-after) > trough > slider {
+    margin-top: -10px;
     background-image: url("assets/slider-horiz-top.png"); }
-    scale.horizontal.marks-before slider:hover {
+    scale.horizontal.color > trough > slider:hover, scale.horizontal.marks-before:not(.marks-after) > trough > slider:hover {
       background-image: url("assets/slider-horiz-top.png"); }
-    scale.horizontal.marks-before slider:disabled {
+    scale.horizontal.color > trough > slider:disabled, scale.horizontal.marks-before:not(.marks-after) > trough > slider:disabled {
       background-image: url("assets/slider-horiz-top-insensitive.png"); }
-      scale.horizontal.marks-before slider:disabled:backdrop {
+      scale.horizontal.color > trough > slider:disabled:backdrop, scale.horizontal.marks-before:not(.marks-after) > trough > slider:disabled:backdrop {
         background-image: url("assets/slider-horiz-top-insensitive.png"); }
-    scale.horizontal.marks-before slider:backdrop {
+    scale.horizontal.color > trough > slider:backdrop, scale.horizontal.marks-before:not(.marks-after) > trough > slider:backdrop {
       background-image: url("assets/slider-horiz-top-insensitive.png"); }
-  scale.vertical slider {
-    min-height: 11px;
-    min-width: 21px;
-    margin: 0;
-    margin-left: -6px;
+  scale.vertical > trough > slider {
     margin-right: -10px;
     background-image: url("assets/slider-vert.png"); }
-    scale.vertical slider:hover {
+    scale.vertical > trough > slider:hover {
       background-image: url("assets/slider-vert.png"); }
-    scale.vertical slider:disabled {
+    scale.vertical > trough > slider:disabled {
       background-image: url("assets/slider-vert-insensitive.png"); }
-      scale.vertical slider:disabled:backdrop {
+      scale.vertical > trough > slider:disabled:backdrop {
         background-image: url("assets/slider-vert-insensitive.png"); }
-    scale.vertical slider:backdrop {
+    scale.vertical > trough > slider:backdrop {
       background-image: url("assets/slider-vert-insensitive.png"); }
-  scale.vertical.marks-before {
+  scale.vertical.color:dir(ltr) > trough > slider, scale.vertical.marks-after:not(.marks-before) > trough > slider {
+    margin-right: -10px;
+    background-image: url("assets/slider-vert.png"); }
+    scale.vertical.color:dir(ltr) > trough > slider:hover, scale.vertical.marks-after:not(.marks-before) > trough > slider:hover {
+      background-image: url("assets/slider-vert.png"); }
+    scale.vertical.color:dir(ltr) > trough > slider:disabled, scale.vertical.marks-after:not(.marks-before) > trough > slider:disabled {
+      background-image: url("assets/slider-vert-insensitive.png"); }
+      scale.vertical.color:dir(ltr) > trough > slider:disabled:backdrop, scale.vertical.marks-after:not(.marks-before) > trough > slider:disabled:backdrop {
+        background-image: url("assets/slider-vert-insensitive.png"); }
+    scale.vertical.color:dir(ltr) > trough > slider:backdrop, scale.vertical.marks-after:not(.marks-before) > trough > slider:backdrop {
+      background-image: url("assets/slider-vert-insensitive.png"); }
+  scale.vertical.color:dir(rtl) > trough > slider, scale.vertical.marks-before:not(.marks-after) > trough > slider {
+    margin-left: -10px;
     background-image: url("assets/slider-vert-left.png"); }
-    scale.vertical.marks-before:hover {
+    scale.vertical.color:dir(rtl) > trough > slider:hover, scale.vertical.marks-before:not(.marks-after) > trough > slider:hover {
       background-image: url("assets/slider-vert-left.png"); }
-    scale.vertical.marks-before:disabled {
+    scale.vertical.color:dir(rtl) > trough > slider:disabled, scale.vertical.marks-before:not(.marks-after) > trough > slider:disabled {
       background-image: url("assets/slider-vert-left-insensitive.png"); }
-      scale.vertical.marks-before:disabled:backdrop {
+      scale.vertical.color:dir(rtl) > trough > slider:disabled:backdrop, scale.vertical.marks-before:not(.marks-after) > trough > slider:disabled:backdrop {
         background-image: url("assets/slider-vert-left-insensitive.png"); }
-    scale.vertical.marks-before:backdrop {
+    scale.vertical.color:dir(rtl) > trough > slider:backdrop, scale.vertical.marks-before:not(.marks-after) > trough > slider:backdrop {
       background-image: url("assets/slider-vert-left-insensitive.png"); }
-  scale value {
-    color: alpha(currentColor, 0.35); }
-  scale marks {
-    color: alpha(currentColor, 0.35); }
-    scale marks mark {
-      box-shadow: 1px 1px white; }
-    scale marks.top {
-      margin-bottom: 6px;
-      margin-top: -12px; }
-    scale marks.bottom {
-      margin-top: 6px;
-      margin-bottom: -12px; }
-    scale marks.top {
-      margin-right: 6px;
-      margin-left: -12px; }
-    scale marks.bottom {
-      margin-left: 6px;
-      margin-right: -12px; }
+  scale.fine-tune.horizontal {
+    padding-top: 9px;
+    padding-bottom: 9px;
+    min-height: 16px; }
+  scale.fine-tune.vertical {
+    min-width: 16px; }
+  scale.fine-tune > trough,
+  scale.fine-tune > trough > fill,
+  scale.fine-tune > trough > highlight {
+    border-radius: 0px; }
+  scale.fine-tune > trough > slider {
+    margin: -4px; }
+  scale > value {
+    color: alpha(currentColor, 0.55);
+    font-feature-settings: "tnum"; }
+  scale > marks {
+    color: alpha(currentColor, 0.55); }
+  scale.horizontal > marks.top {
+    margin-bottom: 6px; }
+  scale.horizontal > marks.bottom {
+    margin-top: 6px; }
+  scale.horizontal > marks indicator {
+    min-width: 1px;
+    min-height: 6px;
+    background-color: currentColor; }
+  scale.horizontal > value.left {
+    margin-right: 9px; }
+  scale.horizontal > value.right {
+    margin-left: 9px; }
+  scale.horizontal.fine-tune > marks.top {
+    margin-top: 3px; }
+  scale.horizontal.fine-tune > marks.bottom {
+    margin-bottom: 3px; }
+  scale.horizontal.fine-tune > marks indicator {
+    min-height: 3px; }
+  scale.vertical > marks.top {
+    margin-right: 6px; }
+  scale.vertical > marks.bottom {
+    margin-left: 6px; }
+  scale.vertical > marks indicator {
+    min-height: 1px;
+    min-width: 6px;
+    background-color: currentColor; }
+  scale.vertical > value.top {
+    margin-bottom: 9px; }
+  scale.vertical > value.bottom {
+    margin-top: 9px; }
+  scale.vertical.fine-tune > marks.top {
+    margin-left: 3px; }
+  scale.vertical.fine-tune > marks.bottom {
+    margin-right: 3px; }
+  scale.vertical.fine-tune > marks indicator {
+    min-height: 3px; }
 
 progressbar {
   font-size: smaller;
@@ -1727,34 +1752,40 @@ calendar {
   border-style: solid;
   border-color: #000000;
   color: #000000; }
-  calendar.header {
+  calendar > header {
     border: none;
     border-bottom: 1px solid black;
     color: #000000; }
-  calendar.button {
-    color: rgba(0, 0, 0, 0.45); }
-    calendar.button:hover {
-      color: #000000; }
-    calendar.button:backdrop {
-      color: rgba(0, 0, 0, 0.45); }
-    calendar.button:disabled {
-      color: rgba(96, 96, 96, 0.45); }
-  calendar:selected {
-    border-radius: 1px;
-    color: #FFFFFF;
-    background-color: #000080; }
-    calendar:selected:backdrop {
+    calendar > header > button {
+      border: none;
+      box-shadow: none;
+      background: none;
+      border-radius: 0; }
+      calendar > header > button:hover {
+        color: #000000; }
+      calendar > header > button:backdrop {
+        color: #000000; }
+      calendar > header > button:disabled {
+        color: #606060; }
+  calendar > grid > label.today {
+    box-shadow: inset 0px -2px #000000; }
+    calendar > grid > label.today:selected {
+      box-shadow: none; }
+  calendar > grid > label:focus {
+    outline-color: #000000;
+    outline-offset: -2px;
+    outline-width: 2px;
+    outline-style: solid; }
+  calendar > grid > label.day-number {
+    padding: 3px; }
+    calendar > grid > label.day-number:selected {
       color: #FFFFFF;
-      background-color: #000080; }
-  calendar:indeterminate {
-    color: alpha(currentColor, 0.1); }
-  calendar.highlight {
-    color: #606060; }
-    calendar.highlight:backdrop {
-      color: #606060; }
-  calendar:backdrop {
-    color: #000000;
-    border-color: #000000; }
+      background-color: #000080;
+      border-radius: 0px; }
+    calendar > grid > label.day-number:checked {
+      background-color: rgba(0, 0, 128, 0.3); }
+  calendar > grid > label.day-number.other-month {
+    color: alpha(currentColor, 0.3); }
 
 window.dialog.message {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2); }
